--- a/index.html
+++ b/index.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="styles/index.css">
+  <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-  <title>Document</title>
+  <title>Portal de notícias</title>
 </head>
 <body>
-  
+  <header class="container">
+    <nav id="primary" class="grid grid-flow-col">
+      <div>
+        <img src="./assets/icons/List.svg" alt="icone menu">
+        <strong>Menu</strong>
+      </div>
+
+      <div>
+        <img src="./assets/Tech News.png" alt="logo technews">
+      </div>
+
+      <div>
+        <strong>Buscar</strong>
+        <img src="./assets/icons/MagnifyingGlass.svg" alt="icone buscar">
+      </div>
+    </nav>
+
+    <nav id="secondary" class="grid grid-flow-col">
+      <a href="">Inteligencia Artificial</a>
+      <a href="">Blockchain</a>
+      <a href="">Hologramas</a>
+      <a href="">Internet</a>
+      <a href="">Vestíveis</a>
+      <a href="">Realidade Aumentada</a>
+      <a href="">Realidade Virtual</a>
+    </nav>
+  </header>
 </body>
 </html>
