--- a/index.html
+++ b/index.html
@@ -40,5 +40,55 @@
       <a href="">Realidade Virtual</a>
     </nav>
   </header>
+
+  <main class="grid container">
+    <section id="featured" class="grid grid-flow-col gap-16">
+      <figure class="card">
+        <img src="./assets/images/Image 01.png" alt="imagem de robo">
+        <figcaption>
+          <span class="content-tag">ROBÓTICA</span>
+          <h2 class="text-2xl">
+            Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e eficiência nas residências.
+          </h2>
+        </figcaption>
+      </figure>
+
+      <div class="grid grid-cols-2 gap-16">
+        <figure class="card">
+          <img src="./assets/images/Image 02.png" alt="hologramas">
+          <figcaption>
+            <span class="content-tag">Hologramas</span>
+            <h2 class="text-lg">Novo Smartphone Projetor 3D chega ao mercado, transformando a forma como vemos nossas telas!</h2>
+          </figcaption>
+        </figure>
+        
+        <figure class="card">
+          <img src="./assets/images/Image 03.png" alt="Internet">
+          <figcaption>
+            <span class="content-tag">INTERNET</span>
+            <h2 class="text-lg">Tecnologia 6G chega às metrópoles brasileiras, prometendo revolucionar a forma como vivemos e nos comuni...</h2>
+          </figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="./assets/images/Image 04.png" alt="vestíveis">
+          <figcaption>
+            <span class="content-tag">VESTPIVEIS</span>
+            <h2 class="text-lg">Empresa lança relógio inteligente capaz de monitorar a saúde mental, oferecendo insights valiosos para o...
+            </h2>
+          </figcaption>
+        </figure>
+        
+        <figure class="card">
+          <img src="./assets/images/Image 05.png" alt="Realidade Virtual">
+          <figcaption>
+            <span class="content-tag">REALIDADE VIRTUAL</span>
+            <h2 class="text-lg">Escolas adotam a tecnologia VR para proporcionar experiências imersivas, transformando a aprendizagem trad...</h2>
+          </figcaption>
+        </figure>
+      </div>
+    </section>
+  </main>
+
 </body>
 </html>
