finalizando mais lidos

--- a/index.html
+++ b/index.html
@@ -88,6 +88,47 @@
         </figure>
       </div>
     </section>
+
+    <section id="weekly">
+      <header class="grid grid-flow-col">
+        <h3>Mais lidas da semana</h3>
+        <a href="" class="grid grid-flow-col">
+          <strong>Ver tudo</strong>
+          <span></span>
+        </a>
+      </header>
+
+      <div class="notices grid gap-16">
+        <figure>
+          <span class="content-tag">VEÍCULOS</span>
+          <img src="./assets/images/Image 06.png" alt="carro do futuro">
+          <figcaption>
+            Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoa...
+          </figcaption>
+        </figure>
+        <figure>
+          <span class="content-tag">HOLOGRAMAS</span>
+          <img src="./assets/images/Image 07.png" alt="telas">
+          <figcaption>
+            Plataforma de videoconferência apresenta nova função de hologramas, tornando as chamada...
+          </figcaption>
+        </figure>
+        <figure>
+          <span class="content-tag">REALIDADE VIRTUAL</span>
+          <img src="./assets/images/Image 08.png" alt="Realidade virtual">
+          <figcaption>
+            Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiên...
+          </figcaption>
+        </figure>
+        <figure>
+          <span class="content-tag">INTERNET</span>
+          <img src="./assets/images/Image 09.png" alt="satélite">
+          <figcaption>
+            Projeto busca oferecer internet de alta velocidade em áreas remotas através de satélites.
+          </figcaption>
+        </figure>
+      </div>
+    </section>
   </main>
 
 </body>
