--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       </div>
     </section>
 
-    <div>
+    <aside>
       <div id="ads">
         <img src="./assets/images/Ads.png" alt="anuncios">
       </div>
@@ -224,9 +224,9 @@
             </div>
 
             <div>
-              <span class="content-tag">Inteligencia Artificial</span>
+              <span class="content-tag">SOFTWARE</span>
               <h3 class="text-xl">
-                Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e pro...
+                Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas eco...
               </h3>
             </div>
           </article>
@@ -237,9 +237,9 @@
             </div>
 
             <div>
-              <span class="content-tag">Inteligencia Artificial</span>
+              <span class="content-tag">REALIDADE VIRTUAL</span>
               <h3 class="text-xl">
-                Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial complet...
+                Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial comp...
               </h3>
             </div>
           </article>
@@ -249,9 +249,9 @@
             </div>
 
             <div>
-              <span class="content-tag">Inteligencia Artificial</span>
+              <span class="content-tag">CRIPTOMOEDAS</span>
               <h3 class="text-xl">
-                Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar o i...
+                Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar...
               </h3>
             </div>
           </article>
@@ -261,9 +261,9 @@
             </div>
 
             <div>
-              <span class="content-tag">Inteligencia Artificial</span>
+              <span class="content-tag">DRONES</span>
               <h3 class="text-xl">
-                Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando o ce...
+                Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando...
               </h3>
             </div>
           </article>
@@ -273,16 +273,16 @@
             </div>
 
             <div>
-              <span class="content-tag">Inteligencia Artificial</span>
+              <span class="content-tag">IMPRESSÃO 3D</span>
               <h3 class="text-xl">
-                Tecnologia inovadora permite a impressão 3D de órgãos humanos, revolucionando a medicina e a li...
+                Tecnologia inovadora permite a impressão 3D de órgãos humanos, revolucionando a medi...
               </h3>
             </div>
           </article>
 
         </div>
       </section>
-    </div>
+    </aside>
   </main>
 
 </body>
